Refactor evaluation pipeline for multi-provider LLM support and UI improvements
- Refactored evaluation pipeline to use LLM service for multi-provider support (Gemini, Azure OpenAI, OpenAI, Claude, etc.)
- Removed hardcoded Gemini API calls from TCSClassifier and IdeaEvaluator
- Added model configuration integration with purpose-based activation
- Fixed classification pipeline to include failed status for retry
- Added retry logic with exponential backoff for rate limit handling
- Reduced batch size to 1 for free tier compatibility
- Updated frontend to display evaluation scores, themes, and investment recommendations
- Fixed completed count to show ideas processed instead of total tasks
- Fixed single idea form field mapping (build_method_preference)
- Added separate Supporting Artefacts file upload field
- Converted documentation fields to file uploads

--- a/public/index.html
+++ b/public/index.html
@@ -925,18 +925,32 @@
 
                             <div style="margin-bottom: 15px;">
                                 <label style="display: block; font-weight: 600; margin-bottom: 5px;">
-                                    Additional Documentation
+                                    Additional Documentation File
                                 </label>
-                                <textarea name="additional_documentation" rows="3"
-                                          style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;"></textarea>
+                                <input type="file" name="additional_documentation" 
+                                       accept=".pdf,.docx,.pptx,.txt"
+                                       style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <small style="color: #666;">Accepted: PDF, DOCX, PPTX, TXT</small>
                             </div>
 
                             <div style="margin-bottom: 15px;">
                                 <label style="display: block; font-weight: 600; margin-bottom: 5px;">
-                                    Second File Info
+                                    Supporting Artefacts File
                                 </label>
-                                <textarea name="second_file_info" rows="2"
-                                          style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;"></textarea>
+                                <input type="file" name="supporting_artefacts" 
+                                       accept=".pdf,.docx,.pptx,.txt,.zip"
+                                       style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <small style="color: #666;">Accepted: PDF, DOCX, PPTX, TXT, ZIP</small>
+                            </div>
+
+                            <div style="margin-bottom: 15px;">
+                                <label style="display: block; font-weight: 600; margin-bottom: 5px;">
+                                    Second File Upload
+                                </label>
+                                <input type="file" name="second_file_upload" 
+                                       accept=".pdf,.docx,.pptx,.mp4,.png,.jpg,.jpeg"
+                                       style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 4px;">
+                                <small style="color: #666;">Accepted: PDF, DOCX, PPTX, MP4, Images</small>
                             </div>
 
                             <div style="margin-bottom: 15px;">
